
syntax = "proto3";

package login.v1;

option go_package = "hyperliquid-server/gen/favorite/v1;favoritev1";
import "google/protobuf/timestamp.proto";
import "options/gorm.proto";

message Favorite {
    option (gorm.opts).ormable = true;
    int64 id = 1 [(gorm.field).tag = { primary_key: true}];
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    string user_id = 4;
    uint32 asset_id = 5;
}

message CreateFavoriteRequest {
  Favorite payload = 1;
}

message CreateFavoriteResponse {
  Favorite result = 1;
}

message ListFavoriteRequest {
    string user_id = 1;
}

message ListFavoriteResponse {
  repeated Favorite results = 1;
}

message DeleteFavoriteRequest {
  int64 id = 1;
}

message DeleteFavoriteResponse {
}


service FavoriteService {
    rpc CreateFavorite(CreateFavoriteRequest) returns (CreateFavoriteResponse) {}
    rpc ListFavorite(ListFavoriteRequest) returns (ListFavoriteResponse) {}
    rpc DeleteFavorite(DeleteFavoriteRequest) returns (DeleteFavoriteResponse) {
        option (gorm.method).object_type = "Favorite";
    }
}
